--- a/Portal11/Site.Master
+++ b/Portal11/Site.Master
@@ -72,7 +72,7 @@
 
                         <li class="dropdown">
                             <a runat="server" id="mnuUser" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                aria-expanded="false" visible="true">User <span class="caret"></span></a>
+                                aria-expanded="false" visible="true">Account Settings <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a runat="server" href="~/Account/ChangeMyPassword">Change My Password</a></li>
                                 <li><a runat="server" href="~/Account/ChangeMyEmailOptions">Change My Email Options</a></li>
